--- a/Bender.yml
+++ b/Bender.yml
@@ -39,7 +39,7 @@ sources:
     - src/hyperbus_phy.sv
     - src/hyperbus_phy_if.sv
     - src/hyperbus_axi.sv
-    - target: test
+    - target: hyper_test
       files:
         # Device models. TODO: extend
         - models/s27ks0641/s27ks0641.v
